--- a/index.html
+++ b/index.html
@@ -3,18 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Duo Studio — A Creative Digital Agency in Washington DC</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <title>Document</title>
 </head>
 
 <body>
 
-hi
+    <div class="cursor">
+        <div class="nav">
+            <div class="nav-part1">
+                <img src="https://d33wubrfki0l68.cloudfront.net/439bf938233c24af021ffe6d206cd42f546e1143/ff4ed/assets/logo.svg"
+                    alt="">
+            </div>
+            <div class="nav-part2">
+                <h4>Home</h4>
+                <h4>Work</h4>
+                <h4>Studio</h4>
+                <h4>Contact</h4>
+            </div>
+            <div class="nav-part3">
+                <div class="circle"></div>
+            </div>
+        </div>
+
+        <div class="main">
+
+            <div class="page1">
+                <h1>Digitally crafted
+                </h1>
+                <h2>brand experiences
+                </h2>
+                <div class="video-Conatainer">
+                    <video autoplay muted loop
+                        src="https://d33wubrfki0l68.cloudfront.net/a13ea7c2ca2f38134748966280e54af4340ce821/f976d/assets/home/projects_madegood-reduced.mp4"></video>
+                </div>
+            </div>
+
+            <div class="page2">
+                <!-- <h1>We are Duo Studio,</h1>
+                <div class="page2-container">
+                    <div class="page2-left">
+                        <h2>A CREATIVE
+                            COLLECTIVE
+                            MADE TO UNLOCK
+                            YOUR BRAND’S
+                            POTENTIAL</h2>
+                    </div>
+                    <div class="page2-right">
+                        <p>We weave together bold strategy and creative execution to produce thought-provoking digital
+                            experiences. We take a highly personalized approach to delivering branding, web design, and
+                            content marketing solutions. Born in the DC area - now serving clients worldwide.</p>
+                        <button>About us</button>
+                    </div>
+                </div> -->
+
+            </div>
+
+        </div>
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+        integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
+        integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 
