--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </h2>
                 <div class="video-Conatainer">
                     <video autoplay muted loop
-                        src="https://github.com/autumn-absconds/duo-studio/assets/65112908/5aaeef6e-9b91-4159-b1c2-446976be38e2
+                        src="https://d33wubrfki0l68.cloudfront.net/a13ea7c2ca2f38134748966280e54af4340ce821/f976d/assets/home/projects_madegood-reduced.mp4
 "></video>
                 </div>
             </div>
